--- a/radio/index.html
+++ b/radio/index.html
@@ -1,1 +1,7 @@
-<meta http-equiv="refresh" content="0; URL='https://a11.asurahosting.com/public/arystation'" />
+<!DOCTYPE html>
+<html lang="en">
+<head><title>AryStation</title></head>
+<body style="margin:0; height:100vh; overflow:hidden;">
+  <iframe src="https://a11.asurahosting.com/public/arystation" style="border:none; width:100%; height:100vh;" allowfullscreen></iframe>
+</body>
+</html>
