--- a/radio/schedule/index.html
+++ b/radio/schedule/index.html
@@ -1,1 +1,9 @@
-<meta http-equiv="refresh" content="0; URL='https://a11.asurahosting.com/public/arystation/schedule'" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>AryStation Schedule</title>
+</head>
+<body style="margin:0; height:100vh; overflow:hidden;">
+  <iframe src="https://a11.asurahosting.com/public/arystation/schedule" style="border:none; width:100%; height:100vh;" allowfullscreen></iframe>
+</body>
+</html>
