--- a/radio/stream/index.html
+++ b/radio/stream/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>AryStation Live Stream</title>
   <style>
     body {
@@ -24,7 +24,7 @@
 </head>
 <body>
   <h1>🎧 AryStation Live Stream</h1>
-  <audio controls autoplay>
+  <audio controls autoplay preload="none">
     <source src="https://a11.asurahosting.com:8740/radio.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
