--- a/radio/stream/index.html
+++ b/radio/stream/index.html
@@ -1,32 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AryStation Live Stream</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      color: white;
-      font-family: sans-serif;
-      flex-direction: column;
-    }
-    audio {
-      width: 90%;
-      max-width: 600px;
-      margin-top: 20px;
-    }
-  </style>
+  <title>AryStation Radio Player</title>
 </head>
-<body>
-  <h1>🎧 AryStation Live Stream</h1>
-  <audio controls autoplay preload="none">
-    <source src="https://a11.asurahosting.com:8740/radio.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
+<body style="margin:0; height:100vh; overflow:hidden;">
+  <iframe 
+    src="https://a11.asurahosting.com/public/arystation"
+    style="border:none; width:100%; height:100vh;" 
+    allowfullscreen>
+  </iframe>
 </body>
 </html>
