--- a/radio/stream/index.html
+++ b/radio/stream/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>AryStation Radio Player</title>
+  <meta charset="UTF-8">
+  <title>AryStation Live Stream</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      background-color: #111;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-family: sans-serif;
+    }
+    audio {
+      width: 80%;
+      max-width: 600px;
+      margin-top: 20px;
+    }
+  </style>
 </head>
-<body style="margin:0; height:100vh; overflow:hidden;">
-  <iframe 
-    src="https://a11.asurahosting.com/public/arystation"
-    style="border:none; width:100%; height:100vh;" 
-    allowfullscreen>
-  </iframe>
+<body>
+  <h1>🎶 AryStation Live Stream</h1>
+  <audio id="player" controls autoplay preload="none">
+    <source src="https://a11.asurahosting.com:8740/radio.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 </body>
 </html>
