--- a/radio/stream/index.html
+++ b/radio/stream/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AryStation Live Stream</title>
+  <title>AryStation Live Stream (Direct IP)</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       height: 100vh;
-      background-color: #111;
+      background: #111;
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -24,9 +24,9 @@
   </style>
 </head>
 <body>
-  <h1>🎶 AryStation Live Stream</h1>
-  <audio id="player" controls autoplay preload="none">
-    <source src="https://a11.asurahosting.com:8740/radio.mp3" type="audio/mpeg">
+  <h1>📡 AryStation Live via Direct IP</h1>
+  <audio controls autoplay preload="none">
+    <source src="http://198.251.89.161:8740/arystation" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 </body>
