--- a/radio/stream/index.html
+++ b/radio/stream/index.html
@@ -1,33 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AryStation Live Stream (Direct IP)</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      background: #111;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-family: sans-serif;
-    }
-    audio {
-      width: 80%;
-      max-width: 600px;
-      margin-top: 20px;
-    }
-  </style>
+  <title>AryStation Live Stream</title>
 </head>
-<body>
-  <h1>📡 AryStation Live via Direct IP</h1>
-  <audio controls autoplay preload="none">
-    <source src="http://198.251.89.161:8740/arystation" type="audio/mpeg">
-    Your browser does not support the audio element.
+<body style="background:#111; color:white; text-align:center; padding:2em;">
+  <h1>🎧 AryStation Live</h1>
+  <audio controls autoplay>
+    <source src="https://radio.metachitect.com:8740/radio.mp3" type="audio/mpeg">
+    Your browser does not support the audio tag.
   </audio>
 </body>
 </html>
